--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title></title>
 	</head>
      <body> 
-        <p>A Golden Retriever bemutatása</p>   
+        <h1>Zrínyi Ilona Gimnázium Informatika 9.osztály, 2025</h1>   
 	</body>
 </html>
