--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title></title>
 	</head>
      <body> 
-        <h1>Zrínyi Ilona Gimnázium Informatika 9.évfolyam, 2025</h1>   
-	</body>
+        <h1>Zrínyi Ilona Gimnázium Informatika 9.évfolyam, 2025</h1>
+	<h2><a href="A9.html" target="_blank">9A</a></h2>
+	<h2><a href="B9.html" target="_blank">9B</a></h2>
+     </body>
 </html>
