--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
         <title>9A csoport</title>
 	</head>
      <body> 
-        <h1>Zrínyi Ilona Gimnázium Informatika 9A csoport, 2025</h1>   
+        <h1>Zrínyi Ilona Gimnázium Informatika 9A csoport, 2025, miért?</h1>   
 	</body>
 </html>
