--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
      <body> 
         <h1>Zrínyi Ilona Gimnázium Informatika 9.évfolyam, 2025</h1>
-	<h2><a href="A9.html" target="_blank">9A</a></h2>
-	<h2><a href="B9.html" target="_blank">9B</a></h2>
+	<h2><a href="A9/index.html" target="_blank">9A</a></h2>
+	<h2><a href="B9/index.html" target="_blank">9B</a></h2>
      </body>
 </html>
