--- a/A9/index.html
+++ b/A9/index.html
@@ -6,10 +6,10 @@
 	</head>
     <body lang="hu-HU">
 	 <h1 align=center>9A osztály informatikai oldala</h1>
-	 <p><a href="1AG/index.html" target="_blank">Diák 1.</a></p>
-	 <p><a href="2BKA/index.html" target="_blank">Diák 2.</a></p>
-	 <p><a href="3BT/index.html" target="_blank">Diák 3.</a></p>
-	 <p><a href="4BL/index.html" target="_blank">Diák 4.</a></p>
-	 <p><a href="5CsJM/index.html" target="_blank">Diák 5.</a></p>
+	 <p><a href="1/index.html" target="_blank">Diák 1.</a></p>
+	 <p><a href="2/index.html" target="_blank">Diák 2.</a></p>
+	 <p><a href="3/index.html" target="_blank">Diák 3.</a></p>
+	 <p><a href="4/index.html" target="_blank">Diák 4.</a></p>
+	 <p><a href="5/index.html" target="_blank">Diák 5.</a></p>
     </body>
 </html>
