--- a/A9/index.html
+++ b/A9/index.html
@@ -11,5 +11,18 @@
 	 <p><a href="3/index.html" target="_blank">Diák 3.</a></p>
 	 <p><a href="4/index.html" target="_blank">Diák 4.</a></p>
 	 <p><a href="5/index.html" target="_blank">Diák 5.</a></p>
+	 <p><a href="6/index.html" target="_blank">Diák 6.</a></p>
+	 <p><a href="7/index.html" target="_blank">Diák 7.</a></p>
+	 <p><a href="8/index.html" target="_blank">Diák 8.</a></p>
+	 <p><a href="9/index.html" target="_blank">Diák 9.</a></p>
+	 <p><a href="10/index.html" target="_blank">Diák 10.</a></p>
+	 <p><a href="11/index.html" target="_blank">Diák 11.</a></p>
+	 <p><a href="12/index.html" target="_blank">Diák 12.</a></p>
+	 <p><a href="13/index.html" target="_blank">Diák 13.</a></p>
+	 <p><a href="14/index.html" target="_blank">Diák 14.</a></p>
+	 <p><a href="15/index.html" target="_blank">Diák 15.</a></p>
+	 <p><a href="16/index.html" target="_blank">Diák 16.</a></p>
+	 <p><a href="17/index.html" target="_blank">Diák 17.</a></p>
+	 <p><a href="18/index.html" target="_blank">Diák 18.</a></p>
     </body>
 </html>
