--- a/A9/17/index.html
+++ b/A9/17/index.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
+<!--SzR-->
+<!-- Harmadik honlapom-->
  <html lang="hu">
-  <head>
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+        <title>Goldi 3 honlapja</title>
+		<style>
+			h1 {color:red;}
+			p {color:blue; font-size:120%;}
+		</style>
+		<link rel="stylesheet" href="goldi.css">
+	</head>
+     <body lang=HU> 
+		<h1 align="center">Harmadik kutyás honlapom
+		<p align="center">Ez egy bekezdés, <br> amiben sortörést, és középre igazítást alkalmaztunk</p>
+		<img src="goldi.jpg" alt="A kutyám egy Golden Retriver">
+		<p> A Golden Retriever bemutatása
+		</p>
+<p.fontos>
+A Golden Retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.
+<br>
+A fajta tudományos megnevezése: Golden Retriever - <i>Canis lupus familiaris.
+</p.fontos>
+	<p>
+<p><strong>Fontos!</strong>Ha gazdi szeretnél lenni, nézz utána, hogy a <em>felelős<em> kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!</p>
+<p>Előnyös tulajdonságai
+<ul>
+<li>Okos, könnyen képezhető</li>
+<li>Szelíd, családbarát</li>
+<li>Nagyon jó vadászkutya</li>
+</ul>
+<img src="kolyok.jpg" height="200" alt="a kutyám kölyökkorában." title="Goldi, a kutyám (kölyökkorában)">
+Goldi, a kutyám
+A kutyám, aki egy Golden retriever. A kutyám kölyök korában.
+Fotók Goldiról
+Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portál - Goldenek fotó oldalát!
+
+A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni, amely miatt általában koszosan jövünk haza a sétából.
+
+Vissza az oldal tetejére
+		</p>
+	</body>
 </html>
