--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
  <html lang="hu">
 	<head>
 		<meta charset="utf-8">
-        <title></title>
+        <title>ZIG Info</title>
+	<style>
+		h1 {text-align: center;}
+		p {text-align: center;}
+		h2 {text-align: center;}
+</style>
 	</head>
      <body> 
         <h1>Zrínyi Ilona Gimnázium Informatika 9.évfolyam, 2025</h1>
