--- a/A9/index.html
+++ b/A9/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
  <html lang="hu">
 	<head>
-		<meta charset="utf-8">
+	<meta charset="utf-8">
         <title>9A osztály honlapja</title>
+	<style>
+		h1 {text-align: center;}
+		p {text-align: center;}
+	</style>
 	</head>
     <body lang="hu-HU">
-	 <h1 align=center>9A osztály informatikai oldala</h1>
+	 <h1>9A osztály informatikai oldala</h1>
 	 <p><a href="1/index.html" target="_blank">Diák 1.</a></p>
 	 <p><a href="2/index.html" target="_blank">Diák 2.</a></p>
 	 <p><a href="3/index.html" target="_blank">Diák 3.</a></p>
