--- a/tkv/index.html
+++ b/tkv/index.html
@@ -1,1 +1,59 @@
-<+--- --->
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+     "http://www.w3.org/TR/html4/transitional.dtd">
+<html>
+<head>
+  <meta HTTP-EQUIV=CONTENT-TYPE CONTENT="text/html; charset=utf-8">
+  <title>Dia 1</title>
+</head>
+<body text="#000000" bgcolor="#FFFFFF" link="#000080" vlink="#0000CC" alink="#000080">
+<center>
+<h2><a href="siframes.html">Az indításhoz kattintson ide.</a></h2>
+</center>
+<center><table width="90%"><tr>
+<td valign="top" align="left" width="25%">
+<h3>Tartalomjegyzék</h3><div align="left">Dia 1</div>
+<div align="left">Dia 2</div>
+<div align="left">Dia 3</div>
+<div align="left">Dia 4</div>
+<div align="left">Dia 5</div>
+<div align="left">Dia 6</div>
+<div align="left">Dia 7</div>
+<div align="left">Dia 8</div>
+<div align="left">Dia 9</div>
+<div align="left">Dia 10</div>
+<div align="left">Dia 11</div>
+<div align="left">Dia 12</div>
+<div align="left">Dia 13</div>
+<div align="left">Dia 14</div>
+<div align="left">Dia 15</div>
+<div align="left">Dia 16</div>
+<div align="left">Dia 17</div>
+<div align="left">Dia 18</div>
+<div align="left">Dia 19</div>
+<div align="left">Dia 20</div>
+</td>
+<td valign="top" align="left" width="75%">
+<p><strong>Szerző:</strong> Fizikova</p>
+<a href="img0.html"><img src="thumb0.jpg" width="256" height="192" alt="Dia 1"></a>
+<a href="img1.html"><img src="thumb1.jpg" width="256" height="192" alt="Dia 2"></a>
+<a href="img2.html"><img src="thumb2.jpg" width="256" height="192" alt="Dia 3"></a>
+<a href="img3.html"><img src="thumb3.jpg" width="256" height="192" alt="Dia 4"></a>
+<a href="img4.html"><img src="thumb4.jpg" width="256" height="192" alt="Dia 5"></a>
+<a href="img5.html"><img src="thumb5.jpg" width="256" height="192" alt="Dia 6"></a>
+<a href="img6.html"><img src="thumb6.jpg" width="256" height="192" alt="Dia 7"></a>
+<a href="img7.html"><img src="thumb7.jpg" width="256" height="192" alt="Dia 8"></a>
+<a href="img8.html"><img src="thumb8.jpg" width="256" height="192" alt="Dia 9"></a>
+<a href="img9.html"><img src="thumb9.jpg" width="256" height="192" alt="Dia 10"></a>
+<a href="img10.html"><img src="thumb10.jpg" width="256" height="192" alt="Dia 11"></a>
+<a href="img11.html"><img src="thumb11.jpg" width="256" height="192" alt="Dia 12"></a>
+<a href="img12.html"><img src="thumb12.jpg" width="256" height="192" alt="Dia 13"></a>
+<a href="img13.html"><img src="thumb13.jpg" width="256" height="192" alt="Dia 14"></a>
+<a href="img14.html"><img src="thumb14.jpg" width="256" height="192" alt="Dia 15"></a>
+<a href="img15.html"><img src="thumb15.jpg" width="256" height="192" alt="Dia 16"></a>
+<a href="img16.html"><img src="thumb16.jpg" width="256" height="192" alt="Dia 17"></a>
+<a href="img17.html"><img src="thumb17.jpg" width="256" height="192" alt="Dia 18"></a>
+<a href="img18.html"><img src="thumb18.jpg" width="256" height="192" alt="Dia 19"></a>
+<a href="img19.html"><img src="thumb19.jpg" width="256" height="192" alt="Dia 20"></a>
+</td></tr></table></center>
+</body>
+</html>
