--- a/B9/index.html
+++ b/B9/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
  <html lang="hu">
-  <head>
-		<meta charset="utf-8">
-        <title>ZIG 9B/25</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+	<head>
+	<meta charset="utf-8">
+        <title>9B osztály honlapja</title>
+	<style>
+		h1 {text-align: center;}
+		p {text-align: center;}
+	</style>
+	</head>
+    <body lang="hu-HU">
+	 <h1>9B osztály informatikai oldala</h1>
+	 <p><a href="1/index.html" target="_blank">Diák 1.</a></p>
+	 <p><a href="2/index.html" target="_blank">Diák 2.</a></p>
+	 <p><a href="3/index.html" target="_blank">Diák 3.</a></p>
+	 <p><a href="4/index.html" target="_blank">Diák 4.</a></p>
+	 <p><a href="5/index.html" target="_blank">Diák 5.</a></p>
+	 <p><a href="6/index.html" target="_blank">Diák 6.</a></p>
+	 <p><a href="7/index.html" target="_blank">Diák 7.</a></p>
+	 <p><a href="8/index.html" target="_blank">Diák 8.</a></p>
+	 <p><a href="9/index.html" target="_blank">Diák 9.</a></p>
+	 <p><a href="10/index.html" target="_blank">Diák 10.</a></p>
+	 <p><a href="11/index.html" target="_blank">Diák 11.</a></p>
+	 <p><a href="12/index.html" target="_blank">Diák 12.</a></p>
+	 <p><a href="13/index.html" target="_blank">Diák 13.</a></p>
+	 <p><a href="14/index.html" target="_blank">Diák 14.</a></p>
+	 <p><a href="15/index.html" target="_blank">Diák 15.</a></p>
+	 <p><a href="16/index.html" target="_blank">Diák 16.</a></p>
+	 <p><a href="17/index.html" target="_blank">Diák 17.</a></p>
+	 <p><a href="18/index.html" target="_blank">Diák 18.</a></p>
+	 <p><a href="19/index.html" target="_blank">Diák 19.</a></p>
+	 <p><a href="20/index.html" target="_blank">Diák 20.</a></p>
+	 <p><a href="21/index.html" target="_blank">Diák 21.</a></p>
+	 <p><a href="22/index.html" target="_blank">Diák 22.</a></p>
+	 <p><a href="23/index.html" target="_blank">Diák 23.</a></p>
+	 <p><a href="24/index.html" target="_blank">Diák 24.</a></p>
+	 <p><a href="25/index.html" target="_blank">Diák 25.</a></p>
+    </body>
 </html>
