--- a/B9/1/index.html
+++ b/B9/1/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
+<!--Goldi harmadik honlapja--!>
  <html lang="hu">
-  <head>
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+        <title>Goldi harmadik honlapja</title>
+		hi (color:red; aligm="cemter";)
+		p(color:blue; font-size: 1204: aligm="center";)
+	</head>
+     <body>     lang=HU   
+	</body>
+	<hl>Harmadik kutyás holapom </hl>
+	<p>Ez egy bekezdés <br> amiben sortörés, és középre igazítást alkalmaztunk
+	<img src="goldi.jpg" height="200" alt="A kutyám, akiegy golden retriver"
+	title="Goldi, a kutyám (felnőttkorában)">
+	<p>
 </html>
+A Golden Retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.
+A fajta tudományos megnevezése: Golden Retriever - Canis lupus familiaris.
+
+Fontos! Ha gazdi szeretnél lenni, nézz utána, hogy a felelős kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!
+Előnyös tulajdonságai
+Okos, könnyen képezhető
+Szelíd, családbarát
+Nagyon jó vadászkutya
+Goldi, a kutyám
+A kutyám, aki egy Golden retriever. A kutyám kölyök korában.
+Fotók Goldiról
+Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portál - Goldenek fotó oldalát!
+
+A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni, amely miatt általában koszosan jövünk haza a sétából.
