--- a/B9/10/index.html
+++ b/B9/10/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
+<!-- Krisztina -->
+<!-- Harmadik honlapom --
  <html lang="hu">
-  <head>
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+        <title>Goldi 3 honlapja 
+        <style>
+		h1 (color:red; aliqn="center";)
+		p (color:blue; font-size:120%; aliqn="center";)
+		</style>
+	</head>
+     <body lang=HU>
+	<h1>Harmadik kutyás honlapom</h1>
+	<p>Ez egy bekezdés, <br> amiben sortörést, és középre igazítást alkalmaztunk. </p>
 </html>
