--- a/B9/2/index.html
+++ b/B9/2/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
- <html lang="hu">
-  <head>
+<!--Megjegyzés-->
+<!--Második honlapom-->
+ <html lang="hu"> 
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+        <title>Goldi második honlapja</title>
+	</head>
+     <body>    
+	</body>
 </html>
