--- a/B9/4/index.html
+++ b/B9/4/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
+<!-- Petra -->
+<!-- Harmadik honlapom-->
  <html lang="hu">
-  <head>
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
-</html>
+        <title> Goldi 3 honlapja </title>
+		</style>
+		hi (color:red; align="center";)
+		p (color:blue; font-size: 1204; align="center";)
+		</style>
+	</head>
+     <body> lang=HU
+	 <hl>Harmadik kutyás honlapom </hl>
+	 <p>Ez egy bekezdés, <br> amiben sortörést, és középre igazítást alkalmazunk. </p>
+	 <img src="goldi.jpg" height="200" alt="A kutyám, aki egy golden retriver"
+	 title="Goldi, a kutyám (felnőttkorában)">
+	 <p>
+	
+<A Golden Retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.
+A fajta tudományos megnevezése: Golden Retriever - Canis lupus familiaris.
+
+Fontos! Ha gazdi szeretnél lenni, nézz utána, hogy a felelős kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!
+Előnyös tulajdonságai
+Okos, könnyen képezhető
+Szelíd, családbarát
+Nagyon jó vadászkutya
+Goldi, a kutyám
+A kutyám, aki egy Golden retriever. A kutyám kölyök korában.
+Fotók Goldiról
+Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portál - Goldenek fotó oldalát!
+
+A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni, amely miatt általában koszosan jövünk haza a sétából.
+
+Vissza az oldal tetejére
