--- a/B9/13/index.html
+++ b/B9/13/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
  <html lang="hu">
-  <head>
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+        <title>Második honlapom</title>
+	</head>
+     <body lang="hu-HU">
+     <h1  align=center style='text-align:center'>Kutyám-oldala</h1>
+	</body>
 </html>
