--- a/B9/15/index.html
+++ b/B9/15/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
+<!--Megjegyzés-->
+<!--Harmadik honlapom-->
  <html lang="hu">
-  <head>
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+        <title>Goldi 3 honlapja</title>
+	
+	<style>
+	     h1 {color:red;}
+		 p {color:blue; font-size:120%;}
+	</style>
+	</head>	
+     <body lang=HU>
+        <h1 align="center">Harmadik kutyás honlapom</h1>	 
+		<p align="center">Ez egy bekezdés, <br> amiben sortörést, és középre igazítást tartalmaz.</p>
+		<img src="goldi.jpg" alt="A kutyám, aki goldenretriver">
+	</body>
 </html>
