--- a/B9/18/index.html
+++ b/B9/18/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
- <html lang="hu">
-  <head>
-		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Goldi Honlapja</title>
+    <style>
+        h1 {color: red; text-align: center;}
+        p {color: blue; font-size: 120%; text-align: center;}
+    </style>
+</head>
+<body>
+   <h1>Második kutyás honlapom</h1>
+   <p>Ez egy bekezdés, <br>amiben sortörést alkalmazunk.</p>
+   <img src="goldi.jpg" alt="A kutya, aki egy Golden Retriever">
+    
+</body>
 </html>
