--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 	<h2><a href="A9/index.html" target="_blank">9A</a></h2>
 	<h2><a href="B9/index.html" target="_blank">9B</a></h2>
 	<p><a href="tkv/index.html" target="_blank">Tankönyvrészlet</a></p>
+	<p><a href="teszt/index.html" target="_blank">Minta oldal</a></p>
      </body>
 </html>
