--- a/A9/2/index.html
+++ b/A9/2/index.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
- <html lang="hu">
-  <head>
-		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
+<!-- Bakos Kristóf -->
+<html lang="hu">
+  <head> <!-- Negyedik honlapom --> </head>
+  <body lang="HU"> <!-- honlaptörzs -->
+    <h1>Negyedik kutyás honlapom</h1>
+    <h2 id="eleje">A Golden Retriever bemutatása</h2>
+    <p>A Golden Retriever egy kedves, barátságos kutyafajta, <br> mely Skóciából származik.</p>
+    <h3>A fajta tudományos megnevezése:</h3>
+    <p>Golden Retriever - <i>Canis lupus familiaris.</i></p>
+    <p><b>Fontos!</b> Ha gazdi szeretnél lenni, nézz utána, hogy a <em>felelős</em> kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!</p>
+    <h2>Előnyös tulajdonságai</h2>
+    <ul>
+      <li>Okos, könnyen képezhető</li>
+      <li>Szelíd, családbarát</li>
+      <li>Nagyon jó vadászkutya</li>
+    </ul>
+    <h2>Fotók Goldiról</h2>
+    <figure>
+      <!-- A kép középre helyezése "dobozban" -->
+      <img src="goldi.jpg" alt="A kutyám egy Golden Retriever.">
+      <figcaption>Goldi, a kutyám (felnőtt korában)</figcaption>
+    </figure>
+    <figure>
+      <img src="kolyok.jpg">
+      <figcaption>A kiskutyám (kölyök korában)</figcaption>
+    </figure>
+    <p>Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portált - Goldenek fotó oldalát!</p>
+    <video width="400" controls>
+  <source src="C:/Users/bakoskristof434@gmail.com/Desktop/goldisetal.mp4" type="video/mp4">
+</video>
+    <p>A videón is láthatod, hogy Goldi nagyon szeret a földön hempergni, amely miatt általában koszosan jövünk haza a sétából.</p>
+    <h2>Típusok</h2>
+    <caption>A Golden Retriever típusai</caption>
   </body>
-</html>
+  </html>
