--- a/A9/4/index.html
+++ b/A9/4/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
  <html lang="hu">
-  <head>
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+        <title></title>
+	</head>
+     <body>    
+	</body>
 </html>
