--- a/B9/14/index.html
+++ b/B9/14/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<'-- Megjegyzés -->
-<'-- Harmadik honlapom -->
-
  <html lang="hu">
 	<head>
 		<meta charset="utf-8">
-        <title>Harmadik honlapom</title>
+        <title>Goldi 3 honlapja</title>
+		<style>
+		h1 {color:red}
+		p {color:blue; font-size:120% ;}
 		</style>
-		     h1 {color:red;}
-			 p {color:blue; front size:120%;}
-			 </style>
-			 <link rel="sytlesheet" href="goldi.css">
+		<link rel="stylesheet" href="goldi.ccs">
 	</head>
-     <body lang=HU> 
-         <h1 align="center">Harmadik kutyás honlapom</h1>
-         <p align="center">Ez egy bekezdés, <br> amiben sortörést, és közepére igazítást alkalmaztunk
-         <img src="goldi.jpg" alt="A kutyám, aki egy Golden Retriever.">		 
+     <body  lang=HU>  
+        <h1 align="center">Harmadik kutyás honlapom</h1>
+        <p align="center">Ez egy bekezdés, <br> amiben sortörést, és közepére igazítást tartalmaztunk</p>
+        <img src="goldi.jpg" alt="A kutyám, aki egy Golden Retriever.">		
 	</body>
-	<p> A Golden Retriever bemutatása
+	<p>A Golden Retriever bemutatása
 Kezdőlap Típusok
 
 A Golden Retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.
@@ -36,4 +33,4 @@ Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay port
 A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni, amely miatt általában koszosan jövünk haza a sétából.
 
 Vissza az oldal tetejére
-</html> 
+</html>
