--- a/B9/15/index 3.html
+++ b/B9/15/index 3.html
@@ -6,11 +6,14 @@
 		<meta charset="utf-8">
         <title>Harmadik+ honlapom</title>
 	
+	<style>
 	<link rel="stylesheet" href="goldi.css">
-
+	     h1 {color:red;}
+		 p {color:blue; font-size:120%;}
+	</style>
 	</head>	
      <body lang=HU>
-        <h1 align="center">4. kutyás honlapom</h1>	 
+        <h1 align="center">Harmadik kutyás honlapom</h1>	 
 		<p align="center">Ez egy bekezdés, <br> amiben sortörést, és középre igazítást tartalmaz.</p>
 		<img src="goldi.jpg" alt="A kutyám, aki goldenretriver">
 		</p> A Golden Retriver bemutatása
