--- a/B9/16/index 4.html
+++ b/B9/16/index 4.html
@@ -6,8 +6,11 @@
 <head> <!-- fejléc --!>
 <meta charset="utf-8">
 <title>Kutyám 4. honlapja</title>
-
-<link rel="stylesheet" href="goldi.css">
+<style>
+h1 {color:red;}
+p {color:blue; font-size:120%;}
+<link rel="stylesheet" href="goldi css"
+</style>
 </head>
 <body lang=HU> <!-- honlaptörzs --!>
 <h1 align="center">Negyedik kutyás honlapom</h1>
