--- a/B9/25/index.html
+++ b/B9/25/index.html
@@ -1,42 +1,24 @@
 <!DOCTYPE html>
 <!-- Megjegyzés -->
-<!-- Harmadik honlapom -->
+<!-- Negyedik honlapom- Vilez Réka -->
  <html lang="hu">
 	<head>
 		<meta charset="utf-8">
-        <title>Harmadik honlapom</title>
-		</style>
-		    h1 {color:red;}
-			p {color:blue; font-size:120%;}
-		</style>
+        <title>Goldi 4 honlapja</title>
 	    <link rel="stylesheet" href="goldi.css">
 	</head>
-     <body <body lang=HU>    
-	    <h1 align="center">Harmadik kutyás honlapom</h1>
-	    <p  align="center">Ez egy bekezdés, <br> amiben sortörést, és középre igazítást alkalmaztunk
-	    <img src`"goldi.jpg" alt="a kutyám, aki egy Golden Retriever.">
-		<p> A Golden Retriever bemutatása
-		</p>
-		<p>
-A Golden Retriever bemutatása
-Kezdőlap Típusok
+    <body lang=HU>    
+	    <h1>Negyedik kutyás honlapom</h1>
+	    <h2 id="eleje">A Golden Retriever bemutatása</h2>
+		<p>A Golden Retriever egy kedves, barátságos kutyafajta, 
+		 <br>mely Skóciából származik.
+         <br>A fajta tudományos megnevezése: 
+		Golden Retriever - <i>Canis lupus familiaris.</i> </p>
+		<p><b>Fontos!</b> Ha gazdi szeretnél lenni, nézz utána, 
+		hogy a <em>felelős</em> kutyatartással kapcsolatban 
+		milyen ajánlások és kötelezettségek vannak!</p>
+	
+		
 
-A Golden Retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.
-A fajta tudományos megnevezése: Golden Retriever - Canis lupus familiaris.
-
-Fontos! Ha gazdi szeretnél lenni, nézz utána, hogy a felelős kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!
-Előnyös tulajdonságai
-Okos, könnyen képezhető
-Szelíd, családbarát
-Nagyon jó vadászkutya
-Goldi, a kutyám
-A kutyám, aki egy Golden retriever. A kutyám kölyök korában.
-Fotók Goldiról
-Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portál - Goldenek fotó oldalát!
-
-A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni, amely miatt általában koszosan jövünk haza a sétából.
-
-Vissza az oldal tetejére
-        </p>
-	</body>
-</html>
+        
+	
