--- a/B9/23/index3.html
+++ b/B9/23/index3.html
@@ -2,29 +2,17 @@
  <html lang="hu">
 	<head>
 		<meta charset="utf-8">
-        <title>Goldi 4 honlapja</title>
+        <title>Harmadik+ honlapom</title>
+		<style>
+		h1 {color:red;}
+		p {color:blue? font-size:120%;}
+		</style>
 		<link rel="stylesheet" href="goldi.css"
-		
-	
+	</head>
      <body lang=Hu>
-         <h1 align="center">Negyedik kutyás honlapom</h1>
-		 <h2 id="eleje">A Golden Retriever bemutatása</h2>
-         <p>A Golden Retriever egy kedves, barátságos kutyafajta,
-		<br>mely Skóciából származik.
-		<br>A fajta tudományos megnevezése:
-		Golden Retriever -<i> Canis lupus familiaris</i></p>
-		<p><b>Fontos!</b> Ha gazdi szeretnél lenni, nézz utána,
-		hogy a <em>felelős<e/m> kutyatartással kapcsolatban 
-		milyen ajánlások és kötelezettségek vannak!</p>
-		<h2>Előnyös tulajdonságai</h2>
-		<ul>
-		     <li>Okos, könnyen képezhető</li>
-			 <li>Szelíd, családbarát</li>
-			 <li>Nagyon jó vadászkutya</li>
-		</ul>
-		<h2>Fotók Goldiról</h2>
-		<figure> <!-- A kép középre helyezése "dobozban"
- <img src="goldi.jpg">
+         <h1 align="center">Harmadik kutyás honlapom</h1>
+         <p align="center"> Ez egy bekezdés, <br> amiben sortörést, és középre igazítást alkamaztunk </p>
+         <img src="goldi.jpg" alt="A kutyám, aki egy Golden Retriver.">
       <p> A golden retriver bemutatása
 	  </p>
 	  <p>
