--- a/B9/2/index.html
+++ b/B9/2/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<!--Megjegyzés-->
-<!--Második honlapom-->
- <html lang="hu"> 
-	<head>
+ <html lang="hu">
+  <head>
 		<meta charset="utf-8">
-        <title>Goldi második honlapja</title>
-	</head>
-     <body>    
-	</body>
+        <title>Nulladik honlapom</title>
+  </head>
+  <body lang="hu-HU">
+   <p>Under construction...</p>
+  </body>
 </html>
