--- a/A9/8/index-0.html
+++ b/A9/8/index-0.html
@@ -39,7 +39,7 @@
 		<p>Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portál
 		-Goldenek fotó oldalát!</p>
 		<video controls width="400">
-			<source src="goldiseta.mp4" type="video/mp4">
+			<aource arc="goldiseta.mp4" type="video/mp4">
 		</video>
 		<p>A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni,
 		amely miatt általában koszosan jövünk haza a sétából.</p>
