--- a/A9/14/index.html
+++ b/A9/14/index.html
@@ -1,56 +1,70 @@
 <!DOCTYPE html>
-<!--Negyedik honlapom - ME -->
+<!-- Ötödik kutyás honlapom - M.Emma -->
  <html lang="hu">
 	<head> <!-- fejléc -->
 		<meta charset="utf-8">
-        <title>Goldi 4 honlapja</title>
-		<style>
-		 hl {color:red;)
-		 p {color:blue; font-size:120°;}
-		 </style>
-		 <link rel= "stylesheet" href= "goldi.css"> <!-- stílusfájl használata -->
+        <title>Goldi ötödik honlapja</title>
+		<link rel="stylesheet" href="goldi.css"> <!-- stílusfájl használata -->
 	</head>
-     <body lang=HU> <!-- honlaptörzs -->
-		<h1  align="center"> Negyedik kutyás honlapom</hl>
-		<h2 id="eleje"> A Golden Retriever bemutatása
-		<p align="center">Ez egy bekezdés, <br> amiben sortörést alkalmaztunk.</p>
-		<img src="goldi.jpg" height=200 alt="A kutyám, aki egy Golden Retriever.">
-	
-		<p>     	A Golden Retriever bemutatása
-</p.fontos>
-<p>
-A Golden Retriever egy kedves, barátságos kutyafajta, mely Skóciából származik.
-<br>
-A fajta tudományos megnevezése: Golden Retriever - <i>Canis lupus familiaris.</i>
-</p.fontos>
-	<p>
-<p><strong>Fontos!</strong> Ha gazdi szeretnél lenni, nézz utána,
-hogy a <em>felelős</em> kutyatartással kapcsolatban milyen ajánlások
-és kötelezettségek vannak!</p>
-<h2>Előnyös tulajdonságai
-<ul>
-	<li>Okos, könnyen képezhető</li>
-	<li>Szelíd, családbarát</li>
-	<li>Nagyon jó vadászkutya</li>
-</ul>
-<h2> Fotók Goldiról </h2>
-<figure> <!-- A kép középre helyezése "dobozban" -->
-<img src="goldikolyok.jpg"> 
-Goldi, a kutyám
-A kutyám, aki egy Golden retriever. A kutyám kölyök korában.
-<p>Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portál - Goldinak fotó oldalát!
-<video vontrols width="400" height="200">
-	<source src="videók/goldihempereg.mp4" type="video/mp4">
-	</video>
-		</p>
-		<p>A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni, amely miatt általában koszosan jövünk haza a sétából.</p>
-
-<video controls width="400">
-<source src="videók/goldihempereg.mp4"
-type="video/mp4">
-</video>
-
-<p><a href="#eleje">Vissza az oldal tetejére</a></p>
-		
-		</body>
+    <body lang=HU> <!-- honlaptörzs -->
+		<h1>Negyedik kutyás honlapom</h1>
+		<h2 id="eleje">A Golden Retriever bemutatása</h2>
+		<p>A Golden Retriever egy kedves, barátságos kutyafajta,
+		 <br> mely Skóciából származik.
+		 <br>A fajta tudományos megnevezése: 
+		 Golden Retriever - <i>Canis lupus familiaris.</i></p>
+		<p><b>Fontos!</b> Ha gazdi szeretnél lenni, nézz utána,
+		hogy a <em>felelős</em> kutyatartással kapcsolatban 
+		milyen ajánlások és kötelezettségek vannak!</p>
+		<h2>Előnyös tulajdonságai</h2>
+		<ul>
+			<li>Okos, könnyen képezhető</li>
+			<li>Szelíd, családbarát</li>
+			<li>Nagyon jó vadászkutya</li>
+		</ul>
+		<h2>Fotók Goldiról</h2>
+		<figure> <!-- A kép középre helyezése "dobozban" -->
+			<img src="goldi.jpg" alt="A kutyám egy Golden Retriver.">
+			<figcaption>Goldi, a kutyám (felnőtt korában)</figcaption>
+		</figure>
+		<figure>
+			<img src="goldikolyok.jpg" alt="A kutyám kölyök korában.">
+			<figcaption>A kiskutyám (kölyök korában)</figcaption>
+		</figure>
+		<p>Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portál
+		- Goldenek fotó oldalát!</p>
+		<video controls width="400">
+			<source src="goldiseta.mp4" type="video/mp4">
+		</video>
+		<p>A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni,
+		amely miatt általában koszosan jövünk haza a sétából.</p>
+		<h2>Típusok</h2>
+<table>
+<caption>A Golden Retriever típusai</caption>
+<tr>
+	<th>Típus</th>
+	<th>Típus leírása</th>
+</tr>
+<tr>
+	<td>Munkatípus</td>
+	<td>Könnyedebb felépítésű. Vékonyabb , hosszabb fej, sötétebb szőrszín,
+	élénk temperamentum, karcsúbb, ruganyosabb, gyorsabb.</td>
+</tr>
+<tr>
+	<td>Kiállítási típus</td>
+	<td>Dúsabb, hosszabb szőrzet, robusztusabb felépítés, világosabb szőrszín, határozottabb.</td>
+</tr>
+<tr>
+	<td>Európai típus</td>
+	<td>Szőrszíne az arany világosabb árnyalata. Rövidebb szőrű, mint az amerikai.
+	Lába rövidebb az amerikainál, így megjelenése zömökebb. Jól pigmentált. Jó szögellésű elöl, hátul.</td>
+</tr>
+<tr>
+	<td>Amerikai típus</td>
+	<td>Orr és fej része finomabb. Színe középarany, rézvörös, de sosem krém. 
+	Mellső szögellései szerényebbek, hátul olykor túlszögelt.</td>
+</tr>
+</table>	
+		<p><a href="#eleje">Vissza az oldal tetejére</a></p>
+	</body>
 </html>
