--- a/A9/17/index.html
+++ b/A9/17/index.html
@@ -1,10 +1,59 @@
 <!DOCTYPE html>
+<!-- megjegyzés-->
+<!-- ötödik honlapom-->  	
+/*A fontos osztályba tartozó bekezdés megjelenése*/
+}<!-- Negyedik honlapom - GN -->
  <html lang="hu">
-  <head>
+	<head>
 		<meta charset="utf-8">
-        <title>Nulladik honlapom</title>
-  </head>
-  <body lang="hu-HU">
-   <p>Under construction...</p>
-  </body>
+        <title>Goldi 4. honlapja</title>
+		<link rel="stylesheet" href="goldi.css">
+		<style>
+			h1 {color:red;}
+			p {color:blue; font-size:120%;}
+		</style>
+		<link rel="stylesheet" href="goldi.css">
+	</head>
+     <body lang=HU> 
+		<h1>ötödik kutyás honlapom</h1>
+		<h2 id="eleje">A golden retriver bemutatása</h2>
+		<p>A Golden Retriever egy kedves, barátságos kutyafajta,<br> mely Skóciából származik.
+		<br>A fajta tudományos megnevezése: Golden Retriever - <i>Canis lupus familiaris.</i></p>
+		<p><b>Fontos!</b> Ha gazdi szeretnél lenni, nézz utána, hogy a <em>felelős</em> kutyatartással kapcsolatban milyen ajánlások és kötelezettségek vannak!</p>
+		<h2>Előnyös tulajdonságai
+		<ul>
+			<li>Okos, könnyen képezhető</li>
+			<li>Szelíd, családbarát</li>
+			<li>Nagyon jó vadászkutya</li>
+		</ul>
+		<h2>Fotók Goldiról</h2>
+		<figure>
+			<img src="goldi.jpg" alt="A kutyám egy Golden Retriver">
+			<figcaption>Goldi, a kutyám (felnőtt korában)</figcaption>
+		</figure>
+		<figure>
+		
+		<p> A Golden Retriever bemutatása
+		</p>
+
+<p>Előnyös tulajdonságai
+<ul>
+<li>Okos, könnyen képezhető</li>
+<li>Szelíd, családbarát</li>
+<li>Nagyon jó vadászkutya</li>
+</ul>
+<img src="kolyok.jpg" height="200" alt="a kutyám kölyökkorában." title="Goldi, a kutyám (kölyökkorában)">
+<video controls width="400">
+	<source src="goldiseta.mp4" type="video/mp4">
+</video>
+Goldi, a kutyám
+A kutyám, aki egy Golden retriever. A kutyám kölyök korában.
+Fotók Goldiról
+Ha szeretnél még több kutyás fotót nézegetni, látogasd meg a Pixabay portál - Goldenek fotó oldalát!
+
+A videón is láthatod, hogy Goldi nagyon szeret a földön hemperegni, amely miatt általában koszosan jövünk haza a sétából.
+
+Vissza az oldal tetejére
+		</p>
+	</body>
 </html>
